# mocha-rpa

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  example_pipeline.yaml  example_simple.yaml
mocharpa/: __init__.py  __main__.py  config.py  events.py
mocharpa/async_api/: __init__.py  wrappers.py
mocharpa/builder/: __init__.py  find_builder.py
mocharpa/core/: __init__.py  context.py  driver.py  element.py  exceptions.py  locator.py
mocharpa/drivers/: __init__.py  mock_driver.py  playwright_driver.py
mocharpa/flow/: __init__.py  branching.py  conditions.py  loops.py
mocharpa/functional/: utils.py
mocharpa/pipeline/: __init__.py  actions.py  audit.py  context.py  loader.py  pipeline.py  step.py  validator.py
mocharpa/plugins/: __init__.py  base.py
mocharpa/plugins/ai/: __init__.py  (+2 more)
mocharpa/scheduler/: __init__.py  backend.py  schedule.py
rpabot/: __init__.py
rpabot/async_api/: wrappers.py
rpabot/builder/: find_builder.py
rpabot/core/: context.py  driver.py  element.py  locator.py
rpabot/drivers/: mock_driver.py
rpabot/flow/: __init__.py  branching.py  conditions.py  loops.py  sequence.py
rpabot/functional/: utils.py
rpabot/pipeline/: __init__.py  actions.py  context.py  loader.py  pipeline.py  step.py
rpabot/plugins/: __init__.py
tests/: run_e2e.py  test_ai_agent.py  test_audit.py  test_config.py  test_e2e.py  test_element.py  test_events.py  test_flow.py  test_functional.py  test_locator.py  test_mock_driver.py  test_pipeline.py  test_scheduler.py  test_validator.py
tests/plugins/: test_csv.py  test_plugins.py
(+20 files in other folders)
